--- a/Modulo 5 - Testing/.github/workflows/ci.yml
+++ b/Modulo 5 - Testing/.github/workflows/ci.yml
@@ -1,11 +1,19 @@
 name: CI Workflow
-on: pull_request
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
         run: npm install
