--- a/Modulo 5 - Testing/.github/workflows/ci.yml
+++ b/Modulo 5 - Testing/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
 
       - name: Install dependencies
         run: npm install
